--- a/CppSummary.vcxproj.filters
+++ b/CppSummary.vcxproj.filters
@@ -15,5 +15,10 @@
     <ClCompile Include="S1E12_List.cpp" />
     <ClCompile Include="S1E13_ClassGeomVectorV2.cpp" />
     <ClCompile Include="S1E14_ClassArrayV1.cpp" />
+    <ClCompile Include="S1E15_Test.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Input.txt" />
+    <Text Include="Output.txt" />
   </ItemGroup>
 </Project>
