--- a/CppSummary.vcxproj
+++ b/CppSummary.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="S1E13_ClassGeomVectorV2.cpp" />
     <ClCompile Include="S1E14_ClassArrayV1.cpp" />
     <ClCompile Include="S1E15_Test.cpp" />
+    <ClCompile Include="S1E16_Templates.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Input.txt" />
