--- a/CppSummary.vcxproj
+++ b/CppSummary.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="S1E16_TemplateFunction.cpp" />
     <ClCompile Include="S1E17_TemplateClass.cpp" />
     <ClCompile Include="S1E18_AVLTree.cpp" />
+    <ClCompile Include="S1E19_Polymorphism.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Input.txt" />
